# intergene-finder

./: .gitignore  Cargo.toml
src/: Attempt1.rs  a.rs  intergenic_regions.bed  main.rs  tRNA_regions.bed
