[package]
name = "Intergene-Things"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
csv = "1.1.6"
indicatif = "0.17.1"
rayon = "1.5.3"

[profile.release]
strip = true

[build]
target = "x86_64-unknown-linux-musl"
